Almost finished site

--- a/google.html
+++ b/google.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Google_rebuilt</title>
+<link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
+<meta charset="utf-8">
 </head>
 <body>
 
